Use fixed size thread pools for monitoring and indexing - CLM-36031 (#14544)